<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">FuLiCenter</string>
    <string name="Version_number_is_wrong">Version number is wrong</string>
    <string name="now_refresh">now_refresh</string>
    <string name="no_more">no more</string>
    <string name="load_more">load more</string>
    <string name="user_name">User name</string>
    <string name="nickname">NickName</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="user_name_connot_be_empty">user name connot be empty</string>
    <string name="illegal_user_name">illegal user name</string>
    <string name="nick_name_connot_be_empty">nick name connot be empty</string>
    <string name="password_connot_be_empty">password connot be empty</string>
    <string name="confirm_password_connot_be_empty">confirm password connot be empty</string>
    <string name="two_input_password">illegal password</string>
    <string name="registering">registering</string>
    <string name="register_fail">register fail</string>
    <string name="register_success">register success</string>
    <string name="register_fail_exists">user name exists</string>
    <string name="login">Login</string>
    <string name="login_fail">登录失败</string>
    <string name="logining">登录中s……</string>
    <string name="login_fail_unknow_user">登录失败，用户名不存在</string>
    <string name="login_fail_error_password">登录失败，密码错误</string>
    <string name="user_datavase_error">用户数据库操作异常</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updatenick">昵称更新中……</string>
    <string name="update_faile">更新昵称失败</string>
    <string name="update_nick_fail_unmotify">昵称没有更新</string>
    <string name="update_user_avater_iamge_fail">上传图片失败</string>
    <string name="update_user_avater_iamge_sucess">上传成功</string>
    <string name="collect_goods_title">collect  goods</string>
    <string name="delete_collect_goods_fail">delete collect goods fail</string>
    <string name="collect_goods_success">colllect goods success</string>
    <string name="uncollect_goods">uncollect goods</string>
    <string name="collect_goods_fail">collect goods fial</string>
    <string name="uncollect_goods_fail">uncollect goods fail</string>
    <string name="card_title">card title</string>
    <string name="add_cart_goods_success">已经添加到购物车</string>
    <string name="add_cart_goods_fail">add cart goods fail</string>
    <string name="no_order_goods">no order goods</string>
    <string name="confirm_order">confirm order</string>
</resources>