<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
   >
    <include layout="@layout/common_head_title_while"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginTop="10dp"
        android:layout_weight="1">
    <RelativeLayout
        android:id="@+id/rlUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white"
        >
            <ImageView
                android:id="@+id/ivUserNameImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_account"/>
            <EditText
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/user_name"
                android:layout_marginLeft="10dip"
                android:singleLine="true"
                android:textSize="18sp"
                android:textColor="#000"
                />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPassWord"
        android:layout_below="@id/rlUserName"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@color/white">
        <ImageView
            android:id="@+id/ivPassWordImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:src="@drawable/icon_pwd"/>
        <EditText
            android:id="@+id/etPassWord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@null"
            android:hint="@string/password"
            android:layout_marginLeft="10dip"
            android:singleLine="true"
            android:textSize="18sp"
            android:textColor="#000"
            />
    </RelativeLayout>

    <LinearLayout
        android:layout_below="@id/rlPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tb_btn_login_orange_normal"
            android:text="@string/login"
            android:paddingRight="5dp"
            android:textColor="@color/white"/>
        <Button
            android:layout_marginTop="10dp"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/tb_regiser_bg"
            android:text="@string/register"
            android:paddingRight="5dp"
            android:textColor="@color/black"/>
    </LinearLayout>
    </RelativeLayout>

</LinearLayout>
