<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#eff2f6">

    <include layout="@layout/common_head_title_while"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="5"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:background="#fff"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/iv_username"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_account"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/user_name"
                android:background="@null"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:id="@+id/username"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="10sp"
            android:background="#fff"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:id="@+id/iv_nick"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:src="@drawable/icon_account"
                android:layout_height="wrap_content"/>
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/nickname"
                android:background="@null"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:id="@+id/nick"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_below="@+id/rl_username"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_height="54dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_password"
                android:src="@drawable/icon_pwd"
                android:layout_marginRight="10dip"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"

                />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:background="@null"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="#000"
                android:textSize="20sp"
                android:inputType="textPassword"
                android:layout_centerVertical="true"
                android:id="@+id/password"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_below="@+id/rl_username"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:background="#fff"
            android:layout_height="54dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/iv_password2"
                android:src="@drawable/icon_pwd"
                android:layout_marginRight="10dip"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"

                />
            <EditText
                android:layout_width="match_parent"
                android:hint="@string/password"
                android:background="@null"
                android:paddingLeft="10dip"
                android:singleLine="true"
                android:textColor="#000"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:layout_centerVertical="true"
                android:id="@+id/confirm_password"
                android:layout_height="match_parent"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:id="@+id/layout_register"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            >
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_register"
                android:layout_weight="1"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/tb_btn_login_orange_normal"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/register"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>
